WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178134
Fix compilation when MASM_PROBE (and therefore DFG) are disabled
https://bugs.webkit.org/show_bug.cgi?id=178134
Summary
Fix compilation when MASM_PROBE (and therefore DFG) are disabled
Guillaume Emont
Reported
2017-10-10 10:29:59 PDT
Since
r222871
, JavaScriptCore does not compile if MASM_PROBE is disabled. Some code provided in this revision need to be protected by #if ENABLED(MASM_PROBE).
Attachments
Patch
(2.55 KB, patch)
2017-10-10 10:37 PDT
,
Guillaume Emont
no flags
Details
Formatted Diff
Diff
Patch
(2.54 KB, patch)
2017-10-10 14:27 PDT
,
Guillaume Emont
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Guillaume Emont
Comment 1
2017-10-10 10:37:34 PDT
Created
attachment 323318
[details]
Patch Patch fixing the issue.
Adrian Perez
Comment 2
2017-10-10 11:12:35 PDT
Comment on
attachment 323318
[details]
Patch Informal review: r+
Saam Barati
Comment 3
2017-10-10 12:21:21 PDT
Comment on
attachment 323318
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=323318&action=review
> Source/JavaScriptCore/bytecode/CodeBlock.cpp:2323 > +#if ENABLE(MASM_PROBE)
This should be: #if ENABLE(DFGJIT) or whatever the correct ENABLE name is
> Source/JavaScriptCore/bytecode/CodeBlock.h:80 > +#if ENABLE(MASM_PROBE)
ditto
> Source/JavaScriptCore/bytecode/CodeBlock.h:774 > +#if ENABLE(MASM_PROBE) > OptimizeAction updateOSRExitCounterAndCheckIfNeedToReoptimize(DFG::OSRExitState&); > +#endif
ditto
Guillaume Emont
Comment 4
2017-10-10 14:27:45 PDT
Created
attachment 323351
[details]
Patch New version using ENABLE(DFG_JIT)
WebKit Commit Bot
Comment 5
2017-10-10 16:14:16 PDT
Comment on
attachment 323351
[details]
Patch Clearing flags on attachment: 323351 Committed
r223155
: <
http://trac.webkit.org/changeset/223155
>
WebKit Commit Bot
Comment 6
2017-10-10 16:14:17 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2017-10-10 16:15:36 PDT
<
rdar://problem/34922580
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug