Fix compilation when MASM_PROBE (and therefore DFG) are disabled https://bugs.webkit.org/show_bug.cgi?id=178134

Reviewed by Saam Barati.

* bytecode/CodeBlock.cpp:
* bytecode/CodeBlock.h:
Disable some code when building without DFG_JIT.


Canonical link: https://commits.webkit.org/194398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223155 268f45cc-cd09-0410-ab3c-d52691b4dbfc